src/test/ui/consts/issue-68542-closure-in-array-len.stderr
error[E0015]: cannot call non-const fn `<[closure@$DIR/issue-68542-closure-in-array-len.rs:6:13: 6:23] as Fn<()>>::call` in constants
  --> $DIR/issue-68542-closure-in-array-len.rs:6:13
   |
LL |     a: [(); (|| { 0 })()]
   |             ^^^^^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
